<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="com.example.nsajic.testapp.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" >
    </item>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never" >
    </item>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" >
    </item>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logOut"
        app:showAsAction="never" >
    </item>
    <item
        android:id="@+id/action_userguide"
        android:orderInCategory="100"
        android:title="User guide"
        app:showAsAction="never" >
    </item>

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom" />

</menu>